--- a/.github/workflows/session1.yml
+++ b/.github/workflows/session1.yml
@@ -7,9 +7,7 @@ jobs:
     
     steps:
       - name: Checkout code
-        run: |
-          git clone https://github.com/SeyedMojtaba1/GA-session1.git
-          mv GA-session1/{.,}* .
+        run: git clone https://github.com/SeyedMojtaba1/GA-session1.git
       
       - name: Install python and pip
         run: sudo apt-get update && sudo apt-get install -y python3 python3-pip
