--- a/.github/workflows/session1.yml
+++ b/.github/workflows/session1.yml
@@ -2,18 +2,20 @@ on:
   push:
 
 jobs:
-  python-test:
+  test:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - name: Checkout code
-        run: git clone https://github.com/SeyedMojtaba1/GA-session1.git
-      
-      - name: Install python and pip
-        run: sudo apt-get update && sudo apt-get install -y python3 python3-pip
-
-      - name: Insall requirements
-        run: pip install -r requirements.txt
-
-      - name: Run tests
-        run: pytest test.py
+    - name: Checkout code
+      run: |
+        git clone https://github.com/Learning-Actions-in-Persian/GA-session1.git
+        mv GA-session1/{.,}* .
+    
+    - name: Install Python and pip
+      run: sudo apt-get update && sudo apt-get install -y python3 python3-pip
+    
+    - name: Install depencies
+      run: pip install -r requirements.txt
+    
+    - name: Run tests
+      run: pytest test.py
