--- a/.github/workflows/session1.yml
+++ b/.github/workflows/session1.yml
@@ -1,4 +1,4 @@
-on: 
+on:
   push:
 
 jobs:
@@ -6,16 +6,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      run: |
-        git clone https://github.com/SeyedMojtaba1/GA-session1.git
-        mv GA-session1/{.,}* .
-    
-    - name: Install Python and pip
-      run: sudo apt-get update && sudo apt-get install -y python3 python3-pip
-    
-    - name: Install depencies
-      run: pip install -r requirements.txt
-    
-    - name: Run tests
-      run: pytest test.py
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Install Python and pip
+        run: sudo apt-get update && sudo apt-get install -y python3 python3-pip
+
+      - name: Install depencies
+        run: pip install -r requirements.txt
+
+      - name: Run tests
+        run: pytest test.py
