--- a/.github/workflows/session1.yml
+++ b/.github/workflows/session1.yml
@@ -9,8 +9,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Install Python and pip
-        run: sudo apt-get update && sudo apt-get install -y python3 python3-pip
+      - name: Setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "11.3"
 
       - name: Install depencies
         run: pip install -r requirements.txt
