--- a/.github/workflows/session1.yml
+++ b/.github/workflows/session1.yml
@@ -46,8 +46,8 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/.npm
-            node_modules
+            ~/node/.npm
+            node/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
