--- a/.github/workflows/session1.yml
+++ b/.github/workflows/session1.yml
@@ -46,7 +46,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: |
-            ~/node/.npm
+            ~/.npm
             node/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
           restore-keys: |
